--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>HiringProject</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
@@ -11,6 +10,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div >
+      <nav class="navbar navbar-light bg-dark">
+        <a class="navbar-brand" href="https://www.bigcommerce.com">
+          <%= image_tag "bc-logo.jpg", width: 50 %>
+        </a>
+      </nav>
+      <%= yield %>
+    </div>
   </body>
 </html>
