refactored model, began setting up background jobs

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Austin HQ Weather</h1>
-<div id="container" class="container"></div>
+<div id="weather" class="container"></div>
+<div id="high-low" class="container"></div>
 
-<%= javascript_include_tag "high_low_chart.coffee" %>
-<%=raw @all.to_json%>
+<%= javascript_include_tag "highstocks_charts.coffee" %>
